auth related remaining working is done
